이미지 파일명 수정

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -82,16 +82,16 @@
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="image/pc_kv_img_01.png" class="swiper-img" alt="" />
+              <img src="../image/PC_kv_img_01.png" class="swiper-img" alt="" />
               <p class="swiper__desc">직원과 가장 가까이에서<br class="br-mo"> 직접 소통하며<br class="br-pc">더 나은 업무 환경과<br class="br-mo"> 직원서비스를 만듭니다.</p>
             </div>
             <div class="swiper-slide">
               <p class="swiper__desc">직원의 일상 생활<br class="br-mo"> 모든 곳에<br class="br-pc">우리의 손길이<br class="br-mo"> 닿아 있습니다.</p>
-              <img src="./image/pc_kv_img_02.png" class="swiper-img" alt="" />l
+              <img src="../image/PC_kv_img_02.png" class="swiper-img" alt="" />l
             </div>
             <div class="swiper-slide">
               <p class="swiper__desc">임직원의 목소리에서<br>우리 일의 자부심과<br class="br-mo"> 무게를 느낍니다.</p>
-              <img src="./image/pc_kv_img_03.png" class="swiper-img" alt="" />
+              <img src="../image/PC_kv_img_03.png" class="swiper-img" alt="" />
             </div>
           </div>
           <div class="swiper-wrap">
@@ -210,14 +210,14 @@
             <li class="service__item">
               <a href="#" class="service__link" role="button">
                 <h4 class="service__title">Employee<br>Service</h4>
-                <img src="./image/pc_employee-service_img.png" alt="">
+                <img src="../image/PC_Employee-Service_img.png" alt="">
                 <span class="service__button">더보기</span>
               </a>
             </li>
             <li class="service__item">
               <a href="#" class="service__link" role="button">
                 <h4 class="service__title">Space &amp; Facility<br>Service</h4>
-                <img src="../image/pc_space-&-facility-service.png" alt="">
+                <img src="../image/PC_Space-&-Facility-Service.png" alt="">
                 <span class="service__button">더보기</span>
               </a>
             </li>
@@ -231,7 +231,7 @@
             <li class="service__item">
               <a href="#" class="service__link" role="button">
                 <h4 class="service__title">Architecture &amp;<br>Space Experience Service</h4>
-                <img src="../image/architecture-&-space-Experience-service_img.png" alt="">
+                <img src="../image/Architecture-&-Space-Experience-Service_img.png" alt="">
                 <span class="service__button">더보기</span>
               </a>
             </li>
